<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaySetting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_title">请设置支付方式</string>
    <string name="yinlian">银联支付</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信支付</string>
    <string name="yibao">易宝支付</string>
	<string name="tv_login">请输入登录密码</string>
	<string name="et_pass_hint">Please Input Password</string>
	<string name="btn_test">测试读取数据</string>
	<string name="btn_getdata">读取数据</string>
</resources>
