<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cynovo.paysetting.PaySettingActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="30sp" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_yinlian"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tv_title"
        card_view:cardCornerRadius="4dp" >

        <TextView
            android:id="@+id/info_yinlian"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yinlian"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/yinlian" />

        <CheckBox
            android:id="@+id/cb_yinlian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="110dp"
            android:clickable="false"
             />
    </android.support.v7.widget.CardView>
    
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_zhifubao"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/card_yinlian"
        android:layout_below="@id/tv_title"
        card_view:cardCornerRadius="4dp" >

        <TextView
            android:id="@+id/info_zhifubao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/zhifubao"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/zhifubao" />

        <CheckBox
            android:id="@+id/cb_zhifubao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="110dp"
            android:clickable="false"
             />
    </android.support.v7.widget.CardView>
    
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_weixin"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/card_zhifubao"
        android:layout_below="@id/tv_title"
        card_view:cardCornerRadius="4dp" >

        <TextView
            android:id="@+id/info_weixin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/weixin"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/weixin" />

        <CheckBox
            android:id="@+id/cb_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="110dp"
            android:clickable="false"
             />
    </android.support.v7.widget.CardView>
    
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_yibao"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/card_yinlian"
        card_view:cardCornerRadius="4dp" >

        <TextView
            android:id="@+id/info_yibao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yibao"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/yibao" />

        <CheckBox
            android:id="@+id/cb_yibao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="110dp"
            android:clickable="false"
             />
    </android.support.v7.widget.CardView>
    
    <FrameLayout 
        android:id="@+id/Frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    
</RelativeLayout>